--- a/dev/styles/_typography.scss
+++ b/dev/styles/_typography.scss
@@ -1,5 +1,5 @@
 $nunito: 'Nunito Sans', sans-serif;
-$secondaryFont: 'Anton', sans-serif;
+$secondaryFont: 'Big Noodle Too', 'Anton', sans-serif;
 
 @mixin title-styles($sizeValue) {
     font-size: $sizeValue * 1px;
