--- a/dev/styles/_main.scss
+++ b/dev/styles/_main.scss
@@ -1,56 +1,50 @@
 main {
     margin-top:100px;
     display: grid;
-    grid-template-columns: 0.9fr 2fr;
+    grid-template-columns: 0.5fr 2fr;
     grid-gap: 20px;
     .hero__container {
-        background:rgba(0,0,0,0.5);
         // border:1px solid cyan;
+        background:rgba(0,0,0,0.6);
         display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows:2fr 1fr;
+        grid-template-columns: 2fr 1fr;
+        grid-template-rows:1fr 1fr;
         grid-auto-flow: dense;
-        height:85vh;
+        height:80vh;
         position: relative;
-        @include breakPoint(third-break) {
-            height:100%;
-        }
-         @include breakPoint(fourth-break) {
+        // @include breakPoint(third-break) {
+        //     height:100%;
+        // }
+         @include breakPoint(third-break) {
                 grid-template-columns: 1fr;
-                grid-template-rows: 1fr 1fr;
+                grid-template-rows: max-content 1fr;
+                margin-bottom:7rem;
         }
-        @include breakPoint(fifth-break) {
-            grid-template-rows: 1fr 1fr 1fr;
-        }
+        // @include breakPoint(fifth-break) {
+        //     grid-template-rows: 1fr 1fr 1fr;
+        // }
         .hero__image {
             // border:1px solid white;
-            z-index:50;
             perspective: 1000px;
-            position:relative;
-            left:50%;
+            position: absolute;
+            bottom:-2rem;
+            width:55rem;
             &:hover img {
                 transform: rotateY(-10deg);
                 transition: transform 1s ease;
             }
-            @include breakPoint(first-break) {
-                position:fixed;
-                width:40%;
-                left:45%;
-            }
-            @include breakPoint(second-break) {
-                width:45%;
-                left:40%;
-            }
             @include breakPoint(third-break) {
-                // display:none;
-                width:40%;
+                right:25rem;
+                height:inherit;
             }
             @include breakPoint(fourth-break) {
-                position:relative;
-                // left:30%;
-                grid-row:1;
-                width:70%;
-                left:10%;
+                right:15rem;
+            }
+            @include breakPoint(fifth-break) {
+                right:6rem;
+            }
+            @include breakPoint(sixth-break) {
+                right:0;
             }
         }
         .hero__info {
@@ -61,9 +55,13 @@ main {
             text-align: right;
             position:absolute;
             top:0;
-            width:100%; 
-            @include breakPoint(fourth-break) {
-                height:100%;
+            width:66.6%; 
+            grid-column-start:1;
+            text-shadow:1px 1px 1px $logoGrey;
+            z-index:2;
+            @include breakPoint(third-break) {
+                width:100%;
+                height:auto;
             } 
             @include breakPoint(fifth-break) {
                 position: relative;
@@ -76,6 +74,7 @@ main {
                 &:hover {
                     color:$white;
                     animation:revflash 3s infinite;
+                    cursor:pointer;
                 }
             }
             li {
@@ -96,21 +95,22 @@ main {
                 @include breakPoint(fifth-break) {
                     @include title-styles(2);
                 }
-                }
+            }
         }
         #map {
-            grid-row-end:-1;
-            grid-column:1 / -1;
+            grid-row:1 / -1;
+            grid-column:2 / -1;
             height:auto;
             width:100%;
+            z-index:2;
             @include breakPoint(third-break) {
-                width:100%;
-                grid-column:1 / -1;
-
+                grid-column:1;
+                grid-row-start:-1;
+                height:25rem;
             }
         }
     }
-    @include breakPoint(fourth-break) {
+    @include breakPoint(third-break) {
         // border:1px solid red;
         grid-template-rows: 50% 50%;
         grid-template-columns: 1fr;
@@ -118,11 +118,8 @@ main {
 }
 
 .hero__container.show {
-    background: radial-gradient(rgba(0,0,0,0.5), transparent), url(../../assets/NepalBG.jpg) no-repeat;
+    background: radial-gradient(rgba(0,0,0,0.2), transparent), url(../../assets/oasis-bg.jpg) no-repeat;
     background-size:cover;
-    .hero__info {
-        background:rgba(0,0,0,0.3);
-    }
 }
 
 aside {
@@ -134,7 +131,8 @@ aside {
     grid-template-rows: 0.25fr 0.4fr 2fr;
     grid-auto-rows: min-content;
     grid-gap: 5px;
-    height:85vh;
+    height:80vh;
+    position: relative;
     .search__results__heading {
         // border:1px solid red;
         background:$logoGrey;
@@ -156,6 +154,7 @@ aside {
         &:hover {
             // border:1px solid $accentDark;
             background:rgba(0,0,0,0.3);
+            cursor:pointer;
             h4 {
                 color:$white;
             }
@@ -168,31 +167,37 @@ aside {
         grid-row-start:4;
     }
     @include breakPoint(third-break) {
-        grid-template-rows: 100px 100px;
+        grid-template-rows: 1fr;
         height:100%;
     }
     @include breakPoint(fourth-break) {
-        height:35vh;
+        height:inherit;
     }
-}
-
-.hero__card {
-    @include breakPoint(fourth-break) {
-        display:none;
+    .copyright {
+        border:1px solid red;
+        position: absolute;
+        bottom:0;
+        text-align: center;
+        width:100%;
+        h6 {
+            font-size:1.4rem;
+        }
     }
 }
 
 .search__wrapper {
     width:100%;
     height:100%;
-    margin-top:5px;
+    padding:5px;
     .search__container {
         // border:1px solid red;
         height:100%;
         padding:5px;
-        padding-left:0;
+        width: 100%;
         display: flex;
-        justify-content: space-between;
+        flex-flow:column wrap;
+        justify-content: center;
+        align-items:center;
         @include breakPoint(third-break) {
             flex-flow:column;
             align-items:center;
@@ -200,22 +205,24 @@ aside {
     }
     .input__bar--search {
         // border:none;
-        border:2px solid $white;
-        width:70%;
-        margin:0 5px;
+        text-align: center;
+        width:100%;
+        border:2.5px solid $white;
+        width:90%;
+        margin-bottom:5px;
         &:focus {
             border-bottom:3px solid $accentDark;
         }
         @include breakPoint(third-break) {
             text-align: center;
-            width:75%;
+            width:97%;
         }
         @include breakPoint(fourth-break) {
             width:90%;
         }
     }
     .input__submit {
-        width:30%;
+        width:100%;
         background:none;
         color:$white;
         border:2px solid $accentDark;
@@ -226,7 +233,7 @@ aside {
             
         }
         @include breakPoint(third-break) {
-            width:85%;
+            width:100%;
         }
         @include breakPoint(fourth-break) {
             width:95%;
